# pixel-simu-arena

./: AI_AGENT_GUIDE.md  DEPLOYMENT_RAILWAY.md  DEPLOYMENT_VERCEL_FRONTEND.md  INTEGRATION_GUIDE.md  README.md  ROADMAP.md  mise.toml  railway.toml  vercel.json
docs/: 00_overview.md  01_game_rules.md  02_data_models.md  03_api_design.md  12_implementation_roadmap.md  13_image_generation.md
server/: .dockerignore  .env.example  .env.test  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  generate_background.py  nixpacks.toml  pyproject.toml  regenerate_battle_sprites.py  test_e2e.py
server/alembic/: env.py
server/alembic/versions/: 001_initial_tables.py
server/app/: config.py  main.py
server/app/api/: deck.py  exceptions.py  gallery.py  match.py  units.py
server/app/engine/: balance.py  movement.py  tick.py  victory.py
server/app/llm/: ai_decide.py  image_gen.py  unit_gen.py
server/app/schemas/: api.py  deck.py  game.py  unit.py
server/app/storage/: db.py  session.py
server/tests/: test_balance.py  test_engine.py
web/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  nginx.conf.template  nixpacks.toml  package-lock.json  package.json
web/src/: App.css  App.tsx  index.css  vite-env.d.ts
web/src/api/: client.ts  errors.ts  index.ts  mockApi.ts  mockData.ts  realApi.ts
web/src/components/: AIThoughtDisplay.css  AIThoughtDisplay.tsx  DeckCard.css  DeckCard.tsx  DeckSelector.tsx  ErrorNotification.tsx  StatsDisplay.css  StatsDisplay.tsx  UnitCreator.tsx
web/src/config/: env.ts
(+17 files in other folders)
